tests/sksl/errors/Ossfuzz28050.glsl
### Compilation failed:

error: 2: invalid arguments to 'float[1]' constructor (expected 1 elements, but found 0)
void wna()  { an(), float[1](); }
                    ^^^^^^^^^^
1 error
